Fix alignment issues for radio and check issues

--- a/scss/components/PrimaryTable.scss
+++ b/scss/components/PrimaryTable.scss
@@ -35,6 +35,7 @@
     &-rowLabel, &-rowLabel:hover {
         @extend .font-large;
         color: $black;
+        vertical-align: top;
     }
 
     &-rowOptions {
