--- a/scss/components/form/Checkbox.scss
+++ b/scss/components/form/Checkbox.scss
@@ -1,7 +1,12 @@
 .Checkbox {
     display: inline;
+
     &.col-form-label {
         padding: 6px 8px 6px 0;
         text-align: left;
+    }
+
+    &-label {
+        vertical-align: middle;
     }
 }
