--- a/scss/components/form/Radio.scss
+++ b/scss/components/form/Radio.scss
@@ -5,4 +5,8 @@
         padding: 6px 8px 6px 0;
         text-align: left;
     }
+
+    &-label {
+        vertical-align: middle;
+    }
 }
